--- a/PaulGAriasBokehAnalysis.ipynb
+++ b/PaulGAriasBokehAnalysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,9 @@
     "from bokeh.sampledata.unemployment import data as unemployment\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "from rudatasciproject1 import geoTime"
    ]
   },
   {
